# terrazoning

./: .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE_BLUEPRINT.md  Dockerfile.backend  Dockerfile.frontend  Makefile  README.md  cloudbuild.backend.yaml  cloudbuild.frontend.yaml
.claude/: VERTEX_CLAUDE_SETUP.md  settings.json
backend/: .env.example  alembic.ini  apply_future_buildability_manual_review.py  backfill_current_use.py  backfill_formal_coverage.py  dedupe_investment_leads.py  docker-compose.yml  export_future_buildability_backlog.py  export_future_buildability_review_sheet.py  export_future_buildability_review_sheet_enriched.py  export_future_buildability_validation_seed.py  export_province_backlog_snapshot.py  force_retry.py  print_coverage_target_status.py  print_current_use_status.py  print_future_buildability_price_consistency.py  print_future_buildability_red_team_report.py  print_future_buildability_status.py  print_future_buildability_threshold_calibration.py  print_future_buildability_validation_report.py  print_status.py  promote_quarantine_parcel.py  pyproject.toml  run_campaign_rollout.py  run_future_buildability.py  run_gliwice_cluster.py  run_planning_signal_sync.py  run_province_campaign.py  run_wfs_sync.py  seed_test_lead.py  seed_test_zones.py  smoke_future_buildability_rollout.py
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20260409_01_future_buildability.py  20260413_01_add_current_use_to_silver_dzialki.py  20260413_02_expand_silver_dzialki_teryt_obreb.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: health.py  leads.py  quarantine_parcels.py  watchlist.py
backend/app/core/: __init__.py  config.py  database.py
backend/app/models/: __init__.py  base.py  bronze.py  gold.py  silver.py
backend/app/schemas/: __init__.py  geojson.py  health.py  leads.py  quarantine_parcels.py  watchlist.py
backend/app/services/: __init__.py  app_gml_ingestor.py  delta_engine.py  ekw_links.py  future_buildability_engine.py  future_buildability_validation.py  geo_resolver.py  gison_raster_ingestor.py  komornik_notice_enricher.py  krakow_msip_resolver.py  manual_backlog_store.py  operations_scope.py  planning_signal_sync.py  planning_signal_utils.py  powiat_wfs_parcel_resolver.py  quarantine_parcels.py  uldk.py  watchlist_store.py  wfs_downloader.py  wms_grid_ingestor.py
backend/data/: future_buildability_validation_corpus.json  future_buildability_validation_seed.json
backend/init-scripts/: 01-init.sql
backend/runtime/: podkarpackie_backlog_snapshot.csv  podkarpackie_current_use_template.csv
backend/tests/: test_app_gml_ingestor.py  test_backfill_current_use.py  test_config.py  test_delta_engine.py  test_ekw_links.py  test_future_buildability_engine.py  test_future_buildability_ops.py  test_future_buildability_validation.py  test_geo_resolver.py  test_gison_raster_ingestor.py  test_komornik_notice_enricher.py  test_krakow_msip_resolver.py  test_leads_api.py  test_operations_scope.py  test_planning_signal_sync.py  test_powiat_wfs_parcel_resolver.py  test_promote_quarantine_parcel.py  test_run_wfs_sync_helpers.py  test_wfs_downloader.py  test_wms_grid_ingestor.py
docs/: 2026-04-14-daily-operations-runbook.md  2026-04-14-slaskie-malopolskie-coverage-audit.md  2026-04-15-gcp-maths-deploy-runbook.md  DB_SCHEMA.md  (+8 more)
scraper/: .env.example  README.md  pyproject.toml  reparse_bronze.py  run_live.py
scraper/scraper/: __init__.py  komornik_crawler.py  main.py
scraper/scraper/extractors/: __init__.py  kw.py  llm_extractor.py  parcel.py  price.py
scraper/tests/: test_llm_extractor.py  test_parcel_extractor.py  test_price_parser.py
(+53 files in other folders)
