[project]
name = "terrazoning-backend"
version = "0.1.0"
description = "TerraZoning — Polish Land Arbitrage Backend API"
requires-python = ">=3.12"

dependencies = [
    # Web framework
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",

    # Database — async SQLAlchemy + PostGIS
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",        # async driver for SQLAlchemy
    "psycopg2-binary>=2.9.10", # sync driver (for Alembic offline mode)
    "geoalchemy2>=0.16.0",    # CRITICAL: PostGIS GEOMETRY column support
    "shapely>=2.0.6",         # geometry manipulation (ST_MakeValid, area checks)

    # Config & validation
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",

    # HTTP client (for ULDK API calls)
    "httpx>=0.28.0",
    "pyproj>=3.6.0",            # CRS reprojection (WFS sources often deliver EPSG:4326)
    "lxml>=5.3.0",              # GML parsing fallback for WFS responses
]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "sqlalchemy-stubs>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ---------------------------------------------------------------------------
# Ruff — linting + formatting
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["app"]

# ---------------------------------------------------------------------------
# Mypy — type checking
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
