[project]
name = "terrazoning-scraper"
version = "0.1.0"
description = "TerraZoning — Bronze Layer Scraper (licytacje komornicze)"
requires-python = ">=3.12"

dependencies = [
    # Reuse backend ORM models + DB session — single source of truth for schema
    "terrazoning-backend",

    # HTTP client — async, with full cookie/redirect support
    "httpx[http2]>=0.28.0",

    # HTML parsing — robust against malformed Polish government HTML
    "beautifulsoup4>=4.12.0",
    "lxml>=5.3.0",          # faster BS4 parser + XML/GML support for future WFS

    # Text normalization — diacritics handling (Commandment #4)
    "Unidecode>=1.3.8",

    # Data structures & validation
    "pydantic>=2.10.0",

    # Async task coordination
    "anyio>=4.7.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
]

[tool.uv.sources]
# Local editable install — scraper reuses backend's ORM models + config
terrazoning-backend = { path = "../backend", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scraper"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
